Van Tuong Update Restore